syntax = "proto3";

package order.v1;

option go_package = "github.com/DmitriiPro/microservices-proto/order/v1;orderv1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse) {
    option(google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }
}
  
message CreateOrderRequest {
  int64 user_id = 1 [(validate.rules).int64 = {gt: 0}];
  string product = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
  int64 quantity = 3 [(validate.rules).int64 = {gt: 0}];
}

message OrderResponse {
  int64 id = 1;
  int64 user_id = 2;
  string product = 3;
  int64 quantity = 4;
  google.protobuf.Timestamp created_at = 5;
}